# serializer version: 1
# name: test_switches[switch.device_name_cooker_hood_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device_name_cooker_hood_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Cooker hood mode',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cooker_hood_mode',
    'unique_id': '0000-0001-cooker_hood_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.device_name_cooker_hood_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Device Name Cooker hood mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_name_cooker_hood_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.device_name_electric_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device_name_electric_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Electric heater',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'electric_heater',
    'unique_id': '0000-0001-electric_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.device_name_electric_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Device Name Electric heater',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_name_electric_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.device_name_fireplace_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.device_name_fireplace_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Fireplace mode',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fireplace_mode',
    'unique_id': '0000-0001-fireplace_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.device_name_fireplace_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Device Name Fireplace mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_name_fireplace_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches_implementation[switch.device_name_electric_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'Device Name Electric heater',
    }),
    'context': <ANY>,
    'entity_id': 'switch.device_name_electric_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
